--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+.app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.content-wrap {
+  flex: 1;
+}
 .fade-enter,
 .fade-exit,
 .fade-exit-active {
@@ -9,4 +24,18 @@
 .fade-enter-done {
   opacity: 1;
   transition: opacity 400ms ease-in-out;
+}
+
+.app-content {
+  min-height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer-fixed {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
